--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,17 +1,2 @@
-Welcome to Instructoverse
+<h1>Welcome to Instructoverse</h1>
 
-
-<% if current_user %>
-  <p>You're already logged in!</p>
-<% else %>
-<%= form_tag login_path, :id => "login" do %>
-    <%= label_tag "Email", :email %>
-    <%= text_field_tag :email %>
-
-    <%= label_tag "Password", :password %>
-    <%= password_field_tag :password %>
-
-    <%= submit_tag "Login" %>
-
-  <% end %>
-<% end %>
