--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,18 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <nav>
+    <ul>
+      <% if current_user %>
+      <li> <%= link_to "Logout", logout_path, :method => "delete" %></li>   
+      <li> <%= link_to "My Profile", user_path %> </li>
+      <li> <%= link_to "All courses" %> </li>
+      <% else %> 
+      <li> <%= link_to "Login", login_path %> </li>
+      <% end %>
+      <li></li>
+    </ul>
+  </nav>
 
 <%= yield %>
 
