--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,3 +40,7 @@ body {
   text-shadow: 0 0 3.4em #fff;
   text-shadow: 0 0 1.5em #fff, 0 0 1.5em #fff;
 }
+
+#errorExplanation h6 {
+  margin: 0 auto;
+}
