--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,34 +1,4 @@
-<h1>Create/Edit a Course<h2>
+<h1>Create a Course<h1>
 
-<%= form_for @course do |f| %>
-  <% if @course.errors.any? %>
-  <div id="errorExplanation">
-    <h2><%= pluralize(@course.errors.count, "error") %> prohibited this course from being saved:</h2>
-  <ul>
-    <% @course.errors.full_messages.each do |msg| %>
-      <li><%= msg %> </li>
-    <% end %>
-    </ul>
-  </div>
-  <% end %>
+<%= render "form" %>
 
-    <p>
-      <%= f.label :title %>
-      <%= f.text_field :title %>
-    </p>
-
-    <p>
-      <%= f.label :url %>
-      <%= f.text_field :url %>
-    </p>
-    
-    <p>
-      <%= f.label :description %>
-      <%= f.text_area :description %>
-    </p>
-
-    <p>
-      <%= f.submit :"Create or Edit Course" %>
-    </p>
-
-  <% end %>
