--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,11 @@
     <ul>
       <% if current_user %>
       <li> <%= link_to "Logout", logout_path, :method => "delete" %></li>   
-      <li> <%= link_to "My Profile", user_path %> </li>
-      <li> <%= link_to "All courses" %> </li>
+      <li> <%= link_to "My Profile", user_path(current_user) %> </li>
+      <li> <%= link_to "All courses", courses_path %> </li>
       <% else %> 
-      <li> <%= link_to "Login", login_path %> </li>
+      <li> <%= link_to "Login or Signup", login_path %> </li>
       <% end %>
-      <li></li>
     </ul>
   </nav>
 
