--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,19 +7,22 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav>
-    <ul>
-      <% if current_user %>
-      <li> <%= link_to "Logout", logout_path, :method => "delete" %></li>   
-      <li> <%= link_to "My Profile", user_path(current_user) %> </li>
-      <% else %> 
-      <li> <%= link_to "Login or Signup", login_path %> </li>
-      <% end %>
-      <li> <%= link_to "All courses", courses_path %> </li>
-    </ul>
-  </nav>
-
+  <div class="top-nav">
+  <h1 class="site-name">Instructoverse</h1>
+    <nav>
+      <ul>
+        <% if current_user %>
+        <li> <%= link_to "Logout", logout_path, :method => "delete" %></li>   
+        <li> <%= link_to "My Profile", user_path(current_user) %> </li>
+        <% else %> 
+        <li> <%= link_to "Login or Signup", login_path %> </li>
+        <% end %>
+        <li> <%= link_to "All courses", courses_path %> </li>
+      </ul>
+    </nav>
+  </div>
+  <div class="container">
 <%= yield %>
-
+  <div>
 </body>
 </html>
