--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,21 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="top-nav">
-  <h1 class="site-name">Instructoverse</h1>
-    <nav>
-      <ul>
-        <% if current_user %>
-        <li> <%= link_to "Logout", logout_path, :method => "delete" %></li>   
-        <li> <%= link_to "My Profile", user_path(current_user) %> </li>
-        <% else %> 
-        <li> <%= link_to "Login or Signup", login_path %> </li>
-        <% end %>
-        <li> <%= link_to "All courses", courses_path %> </li>
-      </ul>
-    </nav>
-  </div>
+<!-- following user-widget is for oauth  -->
+<div id="user-widget">
+  <% if current_user %>
+    Welcome <strong><%= current_user.name %></strong>!
+    
+    <%= link_to "Sign out", logout_path, id: "sign_out" %>
+  <% else %>
+    <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
+  <% end %>
+</div>
   <div class="container">
+
+
 <%= yield %>
   <div>
 </body>
