--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
     <nav>
       <ul>
         <% if current_user %>
-        <li> <%= link_to "Logout", logout_path, :method => "delete" %></li>   
+        <li> <%= link_to "Logout", logout_path, :method => "delete" %></li>
         <li> <%= link_to "My Profile", user_path(current_user) %> </li>
-        <% else %> 
+        <% else %>
         <li> <%= link_to "Login or Signup", login_path %> </li>
         <% end %>
         <li> <%= link_to "All courses", courses_path %> </li>
@@ -24,5 +24,6 @@
   <div class="container">
 <%= yield %>
   <div>
+    <script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script>
 </body>
 </html>
