--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,23 @@
     <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
   <% end %>
 </div>
+
+  <div class="top-nav">
+  <h1 class="site-name">Instructoverse</h1>
+    <nav>
+      <ul>
+        <% if current_user %>
+        <li> Welcome <%= current_user.name %><%= link_to "Sign out", logout_path, id: "sign_out" %></li>   
+        <li> <%= link_to "My Profile", user_path(current_user) %> </li>
+        <% else %> 
+        <li> <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %></li>
+        <% end %>
+        <li> <%= link_to "All courses", courses_path %> </li>
+      </ul>
+    </nav>
+  </div>
+
+
   <div class="container">
 
 
